# OpenCL-Tools

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: presubmit.yml
src/: CMakeLists.txt
src/common/: CMakeLists.txt  cl_headers.hpp  generate-api-definitions.py  generate-loader.py  log.cpp  log.hpp  ocl-api.hpp  oclspec.py  ocltools.cpp  ocltools.hpp
src/trace/: CMakeLists.txt  call.hpp  cltrace.cpp  generate-stubs.py  ocltrace.cpp  serialize.hpp  trace-stubs.cpp  trace.cpp  trace.hpp  visitor-replay.hpp  visitor-srcgen.hpp  visitor.hpp
tests/: CMakeLists.txt  check-format.sh
tests/trace/: CMakeLists.txt  KHR-tests.cpp  api-object-tests.cpp  build-tests.cpp  command-buffer-tests.cpp  command-tests.cpp  event-tests.cpp  image-tests.cpp  info-tests.cpp  kernel-tests.cpp  main.cpp  main.py  memobjects-tests.cpp  semaphore-tests.cpp  simple.cpp  source-round-trip.sh  svm-tests.cpp  testcl.hpp
